force-app/main/default/objects/BMCServiceDesk__Problem_Manifest__c/BMCServiceDesk__Problem_Manifest__c.object-meta.xml
<CustomObject>
    <description>Stores data that is used to track progress of a problem for various status values.</description>
    <label>Problem Manifest</label>
    <nameField>
        <displayFormat>MAN-{0}</displayFormat>
        <label>Problem Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problem Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>