force-app/main/default/objects/BMCServiceDesk__Problem_Manifest__c/fields/BMCServiceDesk__FKProblem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem__c</fullName>
    <label>Problem</label>
    <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
    <relationshipLabel>Problem Manifests</relationshipLabel>
    <relationshipName>Problem_Manifests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>