force-app/main/default/objects/BMCServiceDesk__Problem_Manifest__c/fields/BMCServiceDesk__FKStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <referenceTo>BMCServiceDesk__Status__c</referenceTo>
    <relationshipLabel>Problem Manifests</relationshipLabel>
    <relationshipName>Problem_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>